# AquaGuardNS

./: .gitignore  CLAUDE.md  ClaudeCodePrompt.md  README.md
backend/: .gitignore  data_fetcher.py  main.py  mhw_detector.py  pyproject.toml  requirements.txt  sites.py
backend/tests/: conftest.py  test_data_fetcher.py  test_mhw_detector.py  test_sites.py
data/: README.md  bedford_basin_sst_fallback.csv  bras_dor_sst_fallback.csv  chedabucto_bay_sst_fallback.csv  generate_fallback.py  mahone_bay_sst_fallback.csv
docs/superpowers/plans/: 2026-05-12-aquaguard-ns-implementation.md
docs/superpowers/specs/: 2026-05-12-aquaguard-ns-design.md
frontend/: .gitignore  package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AlertPanel.tsx  ForecastStrip.tsx  SSTChart.tsx  SiteSelector.tsx  SpeciesRisk.tsx  StatCards.tsx
frontend/lib/: api.ts
