[project]
name = "backend"
version = "0.1.0"
description = "Marine Heatwave Early Warning System backend for Nova Scotia aquaculture"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "marineheatwaves",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "python-dateutil>=2.9.0.post0",
    "scipy>=1.17.1",
    "uvicorn[standard]>=0.46.0",
]

[tool.uv.sources]
marineheatwaves = { git = "https://github.com/ecjoliver/marineHeatWaves" }

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
